[package]
name = "nextup"
version = "0.1.1"
edition = "2021"

[dependencies]
bincode = { version = "^2", features = ["serde","derive"] }
clap = { version = "4.5.28", features = ["derive"] }
clap_derive = { version = "4.5.28" }
colog = "1.3.0"
cursive = { version = "0.21.1", features = ["ansi", "builder"] }
dirs = "6.0.0"
keyring = { version = "3.6.2", features = ["apple-native", "linux-native", "windows-native"] }
log = { version = "0.4.26", features = ["serde"] }
native-tls = "0.2.14"
postgres = "0.19.10"
postgres-native-tls = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
