[package]
name = "nextup"
version = "0.1.4"
edition = "2021"

[dependencies]
bincode = { version = "^2", features = ["serde","derive"] }
clap = { version = "4.5.28", features = ["derive"] }
clap_derive = { version = "4.5.28" }
colog = "1.3.0"
dirs = "6.0.0"
keyring = { version = "3.6.2", features = ["apple-native", "linux-native", "windows-native"] }
log = { version = "0.4.26", features = ["serde"] }
native-tls = "0.2.14"
postgres = "0.19.10"
postgres-native-tls = "0.5.1"
raccacoonie = { git = "https://github.com/unquabain/raccacoonie", version = "1.0.1" }
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.20"
